Polish dnsmasq config

--- a/scripts/net/dnsmasq.conf
+++ b/scripts/net/dnsmasq.conf
@@ -16,7 +16,13 @@ no-hosts
 no-resolv
 server=1.1.1.1
 server=8.8.8.8
+# Do not forward:
+#  - hostname queries (e.g. "cp")
+#  - queries in the "qvm0.lan" domain
+#  - reverse lookups in private ranges
 domain-needed
+local=/qvm0.lan/
+bogus-priv
 
 # A friendly TXT record, for fun.
 txt-record=gw.qvm0.lan,"Your gateway to the world."
